fixed black on black text in dark mode

--- a/src/components/DarkMode/DarkMode.css
+++ b/src/components/DarkMode/DarkMode.css
@@ -15,6 +15,10 @@ body.dark .greeting h2 {
 	text-shadow: 1px 1px 2px black, 0 0 10px gold;
 }
 
+body.dark #form input {
+	color: white;
+}
+
 /* text-shadow: 1px 1px 2px black, 0 0 40px gold 0 0 35px var(--purple); */
 body.dark .header {
 	background-color: black;
